# orion

./: Cargo.toml  README.md  architect.py  argus.py  build.bat  captcha_bridge.py  captcha_config.json  captcha_solver.go  cassandra.py  cassandra_params.json  cloud_server.py  deploy_cloud.sh  echo.py  financial_validation_required.json  genesis.py  genesis_state.json  gift_card_key.key  go.mod  golem.py  golem_params.json  janus.py  janus_clean_state.json  mnemosyne.py  mobile_api.py  orion_core.py  ouroboros.py  ouroboros_state.json  payment_config.json  payments.db  plutus.py  plutus_key.key  plutus_ledger.json  proxy_bridge.py  proxy_manager.rs  railway.toml  real_captcha_integration.py  real_config.json  real_payment_monitor.py  requirements.txt  shade.py  (+6 more)
.amazonq/rules/memory-bank/: product.md
docker/: Dockerfile
orion_mobile/: build_apk.bat  pubspec.yaml
orion_mobile/lib/: main.dart
