[package]
name = "proxy_manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proxy_manager"
path = "proxy_manager.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"